[tool.poetry]
name = "klaringl"
version = "0.1.0"
description = ""
authors = ["klaringl <klaringl@klaringl.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
markdown = "^3.6"
mysqlclient = "2.2.4"
requests = "^2.32.3"
django-jsonform = "2.22.0"
pillow = "^11.3.0"
xlsxwriter = "^3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
